# fast-api-learn

./: .gitignore  README.md  pyproject.toml
src/learn_api/: __init__.py  database.py  main.py  models.py  schemas.py
